; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/i2c/extr_base.c_nouveau_i2c_getscl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/i2c/extr_base.c_nouveau_i2c_getscl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_i2c_port = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.nouveau_i2c_port*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @nouveau_i2c_getscl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nouveau_i2c_getscl(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.nouveau_i2c_port*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.nouveau_i2c_port*
  store %struct.nouveau_i2c_port* %5, %struct.nouveau_i2c_port** %3, align 8
  %6 = load %struct.nouveau_i2c_port*, %struct.nouveau_i2c_port** %3, align 8
  %7 = getelementptr inbounds %struct.nouveau_i2c_port, %struct.nouveau_i2c_port* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32 (%struct.nouveau_i2c_port*)*, i32 (%struct.nouveau_i2c_port*)** %9, align 8
  %11 = load %struct.nouveau_i2c_port*, %struct.nouveau_i2c_port** %3, align 8
  %12 = call i32 %10(%struct.nouveau_i2c_port* %11)
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
